@@ -7,6 +7,7 @@
 * Performance enhancement when calculating Unacknowledged event summary
 * Change Script utility DataSourceQuery to require read permission to query for a data source, was previously edit permission
 * Fix bug where nightly purge would fail to delete orphaned series ids if they didn't match the data point id
+* Remove tracking latest alarm timestamp from EventManager
 
 *Version 4.2.2*
 * Fix bug in mailing lists that would prevent emails from being sent to them
